# hs-functors.hs

./: .travis.yml  hs-functors.cabal
Control/: Apply.hs  Biapplicative.hs  Comonad.hs  Semigroupoid.hs
Control/Applicative/: Free.hs
Control/Comonad/: Cofree.hs  Density.hs
Control/Comonad/Trans/: Class.hs  Cofree.hs
Control/Monad/: Codensity.hs  Free.hs  Morph.hs
Control/Monad/Free/: Church.hs
Control/Monad/Trans/: Compose.hs  Free.hs
Data/: Bicotraversable.hs  Bizip.hs  Cotraversable.hs  Fix.hs  FnList.hs  Profunctor.hs
Data/Bifunctor/: Associative.hs  Biff.hs  Braided.hs  Product.hs  Tannen.hs
Data/Functor/: Contravariant.hs  Day.hs  Join.hs  Tracing.hs
Data/Functor/Kan/: L.hs  R.hs
Data/List/: Infinite.hs
Data/Profunctor/: Compose.hs  Yoneda.hs
src-ghc-8.0+/Util/: Magic.hs
src¬ghc-8.0+/Util/: Magic.hs
