name:                hs-functors
version:             0.2.1.0
synopsis:            Functors from products of Haskell and its dual to Haskell
-- description:         
license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck
maintainer:          m.farkasdyck@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC ==8.6.5
                   , GHC ==8.8.3
                   , GHC ==8.10.1

library
  hs-source-dirs: .
  exposed-modules:     Control.Biapplicative
                     , Control.Comonad
                     , Control.Comonad.Cofree
                     , Control.Comonad.Density
                     , Control.Comonad.Trans.Class
                     , Control.Monad.Codensity
                     , Control.Monad.Free
                     , Control.Monad.Morph
                     , Control.Monad.Trans.Compose
                     , Control.Semigroupoid
                     , Data.Bicotraversable
                     , Data.Bifunctor.Associative
                     , Data.Bifunctor.Biff
                     , Data.Bifunctor.Braided
                     , Data.Bifunctor.Product
                     , Data.Bifunctor.Tannen
                     , Data.Bizip
                     , Data.Cotraversable
                     , Data.Fix
                     , Data.FnList
                     , Data.Functor.Contravariant
                     , Data.Functor.Join
                     , Data.Functor.Tracing
                     , Data.List.Infinite
                     , Data.Profunctor
  other-modules:
    Util.Magic
  -- other-extensions:    
  build-depends:       base >=4.9 && <5
                     , dual >=0.1.1 && <0.2
                     , filtrable >=0.1 && <0.2
                     , tagged >=0.8.6 && <0.9
                     , transformers >=0.5.3 && <0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , EmptyCase
                     , UnicodeSyntax
                     , TypeOperators
                     , PolyKinds
                     , RankNTypes
                     , FlexibleContexts, FlexibleInstances
                     , StandaloneDeriving
                     , DeriveFunctor, DeriveFoldable, DeriveTraversable
                     , DerivingVia
  ghc-options:         -Wall -Wcompat -Wredundant-constraints -Wno-name-shadowing
                       -Wincomplete-record-updates -Wincomplete-uni-patterns
                       -Werror=incomplete-patterns
                       -Werror=incomplete-uni-patterns
                       -Werror=incomplete-record-updates
                       -Werror=missing-fields
                       -Werror=missing-methods

  if impl (ghc >= 8.0)
    hs-source-dirs: src-ghc-8.0+
  else
    hs-source-dirs: src¬ghc-8.0+
